implement register password hashing and login verification